[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=1]
[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/UI/knot_sep2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=4]
[ext_resource path="res://mods/Sulayre.Lure/Scenes/LureKit/Tabs/Tabs/ModGenerator/ModGenerator.gd" type="Script" id=5]
[ext_resource path="res://mods/Sulayre.Lure/Scenes/LureKit/Tabs/Tabs/ModGenerator/ManifestSetup.gd" type="Script" id=6]
[ext_resource path="res://Assets/Themes/accid___.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://mods/Sulayre.Lure/Scenes/LureKit/Tabs/Tabs/ModGenerator/ManifestReview.gd" type="Script" id=8]
[ext_resource path="res://Assets/Themes/button_tan_pressed.tres" type="StyleBox" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_char = 2
font_data = ExtResource( 7 )

[node name="modgen" type="Control"]
anchor_left = 0.076
anchor_top = 0.048
anchor_right = 0.924
anchor_bottom = 0.952
margin_left = -0.308006
margin_top = 0.16
margin_right = 0.307983
margin_bottom = -0.160034
mouse_filter = 1
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Steps" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Beginning" type="Panel" parent="Steps"]
anchor_left = 0.0127331
anchor_top = 0.262
anchor_right = 0.987495
anchor_bottom = 0.738
margin_left = 0.26062
margin_top = 0.287979
margin_right = 0.591919
margin_bottom = -0.288025
__meta__ = {
"_edit_use_anchors_": true
}

[node name="sep2" type="TextureRect" parent="Steps/Beginning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -588.0
margin_top = -107.0
margin_right = 588.0
margin_bottom = -73.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Intro" type="RichTextLabel" parent="Steps/Beginning"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 57.0
margin_top = 34.0
margin_right = -56.0
margin_bottom = -34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0.352941, 0.458824, 0.352941, 1 )
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][b]Welcome to LureKit's Mod Generator![/b]



This tool will help you get started with your next mod, shall we start?
[/center]

"
text = "Welcome to LureKit's Mod Generator!



This tool will help you get started with your next mod, shall we start?


"

[node name="firstNext" type="Button" parent="Steps/Beginning"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -149.612
margin_top = -34.0
margin_right = 150.388
margin_bottom = 35.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 6
text = "LETS GO!"
script = ExtResource( 2 )

[node name="ManifestSetup" type="Panel" parent="Steps"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="Steps/ManifestSetup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = 32.0
margin_right = -28.7761
margin_bottom = -68.0

[node name="HBoxContainer" type="HBoxContainer" parent="Steps/ManifestSetup/VBoxContainer"]
margin_right = 1571.0
margin_bottom = 86.0

[node name="ModIdEntry" type="VBoxContainer" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 587.0
margin_bottom = 86.0
rect_min_size = Vector2( 392, 0 )
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer/ModIdEntry"]
margin_right = 392.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer/ModIdEntry/HBoxContainer3"]
margin_right = 392.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Mod ID / Folder Name"

[node name="InvalidId" type="Label" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer/ModIdEntry/HBoxContainer3"]
unique_name_in_owner = true
visible = false
margin_left = 230.0
margin_right = 392.0
margin_bottom = 34.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.67451, 0, 0.160784, 1 )
text = " Invalid Mod ID!"
align = 2
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer/ModIdEntry"]
margin_top = 38.0
margin_right = 392.0
margin_bottom = 86.0
size_flags_horizontal = 3
alignment = 1

[node name="Field" type="Panel" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer/ModIdEntry/HBoxContainer2"]
margin_right = 392.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 1 )

[node name="ModId" type="TextEdit" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer/ModIdEntry/HBoxContainer2/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 1.0
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
middle_mouse_paste_enabled = false
smooth_scrolling = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PckEntry" type="VBoxContainer" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer"]
margin_left = 1029.0
margin_right = 1329.0
margin_bottom = 86.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Label" type="Label" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer/PckEntry"]
margin_right = 300.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Project Pack File Name"
align = 1

[node name="PckName" type="Label" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer/PckEntry"]
unique_name_in_owner = true
margin_top = 38.0
margin_right = 300.0
margin_bottom = 86.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 48 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "unnamed.pck"
align = 1
valign = 1

[node name="Field" type="Panel" parent="Steps/ManifestSetup/VBoxContainer/HBoxContainer/PckEntry/PckName"]
show_behind_parent = true
margin_right = 300.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 9 )

[node name="ModNameEntry" type="VBoxContainer" parent="Steps/ManifestSetup/VBoxContainer"]
margin_top = 90.0
margin_right = 1571.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Steps/ManifestSetup/VBoxContainer/ModNameEntry"]
margin_right = 1571.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="Steps/ManifestSetup/VBoxContainer/ModNameEntry/HBoxContainer"]
margin_right = 198.0
margin_bottom = 34.0
size_flags_horizontal = 2
text = "In-Game Mod Name"

[node name="sep2" type="TextureRect" parent="Steps/ManifestSetup/VBoxContainer/ModNameEntry/HBoxContainer"]
margin_left = 395.0
margin_right = 1571.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Field" type="Panel" parent="Steps/ManifestSetup/VBoxContainer/ModNameEntry"]
margin_top = 38.0
margin_right = 1571.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 48 )
custom_styles/panel = ExtResource( 1 )

[node name="ModName" type="TextEdit" parent="Steps/ManifestSetup/VBoxContainer/ModNameEntry/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 1.0
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
middle_mouse_paste_enabled = false
smooth_scrolling = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AuthorEntry" type="VBoxContainer" parent="Steps/ManifestSetup/VBoxContainer"]
margin_top = 180.0
margin_right = 1571.0
margin_bottom = 266.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry"]
margin_right = 1571.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry/HBoxContainer"]
margin_right = 98.0
margin_bottom = 34.0
size_flags_horizontal = 2
text = "Author(s)"

[node name="sep2" type="TextureRect" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry/HBoxContainer"]
margin_left = 395.0
margin_right = 1571.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Field" type="Panel" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry"]
margin_top = 38.0
margin_right = 1571.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 48 )
custom_styles/panel = ExtResource( 1 )

[node name="ModAuthor" type="TextEdit" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 1.0
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
middle_mouse_paste_enabled = false
smooth_scrolling = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AuthorEntry2" type="VBoxContainer" parent="Steps/ManifestSetup/VBoxContainer"]
margin_top = 270.0
margin_right = 1571.0
margin_bottom = 356.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry2"]
margin_right = 1571.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry2/HBoxContainer"]
margin_right = 391.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="VerHint" type="Label" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry2/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 77.0
margin_bottom = 34.0
size_flags_horizontal = 0
text = "Version"

[node name="VerFormat" type="Label" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry2/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 110.0
margin_right = 391.0
margin_bottom = 34.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.803922, 0.14902, 0.14902, 1 )
text = "Major.Minor.Hotfix"
align = 1

[node name="sep2" type="TextureRect" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry2/HBoxContainer"]
margin_left = 395.0
margin_right = 1571.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Field" type="Panel" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry2"]
margin_top = 38.0
margin_right = 1571.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 48 )
custom_styles/panel = ExtResource( 1 )

[node name="ModVersion" type="TextEdit" parent="Steps/ManifestSetup/VBoxContainer/AuthorEntry2/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 1.0
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
text = "#.#.#"
middle_mouse_paste_enabled = false
smooth_scrolling = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionEntry" type="VBoxContainer" parent="Steps/ManifestSetup/VBoxContainer"]
margin_top = 360.0
margin_right = 1571.0
margin_bottom = 876.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Steps/ManifestSetup/VBoxContainer/DescriptionEntry"]
margin_right = 1571.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="Steps/ManifestSetup/VBoxContainer/DescriptionEntry/HBoxContainer"]
margin_right = 121.0
margin_bottom = 34.0
size_flags_horizontal = 2
text = "Description"

[node name="sep2" type="TextureRect" parent="Steps/ManifestSetup/VBoxContainer/DescriptionEntry/HBoxContainer"]
margin_left = 395.0
margin_right = 1571.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Field" type="Panel" parent="Steps/ManifestSetup/VBoxContainer/DescriptionEntry"]
margin_top = 38.0
margin_right = 1571.0
margin_bottom = 516.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )

[node name="ModDescription" type="TextEdit" parent="Steps/ManifestSetup/VBoxContainer/DescriptionEntry/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 0.964126
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 0
middle_mouse_paste_enabled = false
smooth_scrolling = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ManifestReview" type="Panel" parent="Steps"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="Steps/ManifestReview"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = 32.0
margin_right = -28.7761
margin_bottom = -52.0

[node name="IDPanel" type="Panel" parent="Steps/ManifestReview/VBoxContainer"]
margin_right = 1571.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Steps/ManifestReview/VBoxContainer/IDPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel/HBoxContainer3"]
margin_top = 8.0
margin_right = 313.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Mod ID"
align = 1

[node name="FinalId" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 317.0
margin_right = 1571.0
margin_bottom = 48.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 48 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "mod_id"
align = 1
valign = 1

[node name="Field" type="Panel" parent="Steps/ManifestReview/VBoxContainer/IDPanel/HBoxContainer3/FinalId"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="IDPanel5" type="Panel" parent="Steps/ManifestReview/VBoxContainer"]
margin_top = 54.0
margin_right = 1571.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Steps/ManifestReview/VBoxContainer/IDPanel5"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel5/HBoxContainer3"]
margin_top = 8.0
margin_right = 313.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "PCK File"
align = 1

[node name="FinalPck" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel5/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 317.0
margin_right = 1571.0
margin_bottom = 48.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 48 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "pck_file"
align = 1
valign = 1

[node name="Field" type="Panel" parent="Steps/ManifestReview/VBoxContainer/IDPanel5/HBoxContainer3/FinalPck"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 9 )

[node name="IDPanel2" type="Panel" parent="Steps/ManifestReview/VBoxContainer"]
margin_top = 108.0
margin_right = 1571.0
margin_bottom = 158.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Steps/ManifestReview/VBoxContainer/IDPanel2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel2/HBoxContainer3"]
margin_top = 8.0
margin_right = 313.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Mod Name"
align = 1

[node name="FinalName" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel2/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 317.0
margin_right = 1571.0
margin_bottom = 48.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 48 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "mod_name"
align = 1
valign = 1

[node name="Field" type="Panel" parent="Steps/ManifestReview/VBoxContainer/IDPanel2/HBoxContainer3/FinalName"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 9 )

[node name="IDPanel3" type="Panel" parent="Steps/ManifestReview/VBoxContainer"]
margin_top = 162.0
margin_right = 1571.0
margin_bottom = 212.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Steps/ManifestReview/VBoxContainer/IDPanel3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel3/HBoxContainer3"]
margin_top = 8.0
margin_right = 313.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Mod Author"
align = 1

[node name="FinalAuthor" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel3/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 317.0
margin_right = 1571.0
margin_bottom = 48.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 48 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "mod_author"
align = 1
valign = 1

[node name="Field" type="Panel" parent="Steps/ManifestReview/VBoxContainer/IDPanel3/HBoxContainer3/FinalAuthor"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 9 )

[node name="IDPanel4" type="Panel" parent="Steps/ManifestReview/VBoxContainer"]
margin_top = 216.0
margin_right = 1571.0
margin_bottom = 266.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Steps/ManifestReview/VBoxContainer/IDPanel4"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel4/HBoxContainer3"]
margin_top = 8.0
margin_right = 313.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "Version"
align = 1

[node name="FinalVersion" type="Label" parent="Steps/ManifestReview/VBoxContainer/IDPanel4/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 317.0
margin_right = 1571.0
margin_bottom = 48.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 48 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "mod_version"
align = 1
valign = 1

[node name="Field" type="Panel" parent="Steps/ManifestReview/VBoxContainer/IDPanel4/HBoxContainer3/FinalVersion"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 9 )

[node name="DescriptionEntry" type="VBoxContainer" parent="Steps/ManifestReview/VBoxContainer"]
margin_top = 270.0
margin_right = 1571.0
margin_bottom = 682.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Steps/ManifestReview/VBoxContainer/DescriptionEntry"]
margin_right = 1571.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="Steps/ManifestReview/VBoxContainer/DescriptionEntry/HBoxContainer"]
margin_right = 1571.0
margin_bottom = 34.0
size_flags_horizontal = 3
text = "Description"
align = 1

[node name="Field" type="Panel" parent="Steps/ManifestReview/VBoxContainer/DescriptionEntry"]
margin_top = 38.0
margin_right = 1571.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )

[node name="FinalDescription" type="TextEdit" parent="Steps/ManifestReview/VBoxContainer/DescriptionEntry/Field"]
unique_name_in_owner = true
anchor_left = 0.0267176
anchor_right = 0.973282
anchor_bottom = 0.964126
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 0
middle_mouse_paste_enabled = false
smooth_scrolling = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="Steps/ManifestReview/VBoxContainer"]
margin_top = 686.0
margin_right = 1571.0
margin_bottom = 892.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="CreateMod" type="Button" parent="Steps/ManifestReview/VBoxContainer/CenterContainer"]
margin_left = 635.0
margin_top = 53.0
margin_right = 935.0
margin_bottom = 153.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 6
text = "CREATE MOD"

[node name="StepButtons" type="HBoxContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 0.223877
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Previous" type="Button" parent="StepButtons"]
unique_name_in_owner = true
margin_left = 256.0
margin_right = 556.0
margin_bottom = 69.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 6
text = "PREVIOUS"
script = ExtResource( 2 )

[node name="Next" type="Button" parent="StepButtons"]
unique_name_in_owner = true
margin_left = 1072.0
margin_right = 1372.0
margin_bottom = 69.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 6
text = "NEXT"
script = ExtResource( 2 )

[connection signal="changed_step" from="." to="." method="_on_modgen_changed_step"]
[connection signal="pressed" from="Steps/Beginning/firstNext" to="." method="_on_Next_pressed"]
[connection signal="focus_exited" from="Steps/ManifestSetup/VBoxContainer/HBoxContainer/ModIdEntry/HBoxContainer2/Field/ModId" to="Steps/ManifestSetup" method="_on_ModId_focus_exited"]
[connection signal="text_changed" from="Steps/ManifestSetup/VBoxContainer/HBoxContainer/ModIdEntry/HBoxContainer2/Field/ModId" to="Steps/ManifestSetup" method="_on_ModId_text_changed"]
[connection signal="focus_exited" from="Steps/ManifestSetup/VBoxContainer/ModNameEntry/Field/ModName" to="Steps/ManifestSetup" method="_on_ModName_focus_exited"]
[connection signal="focus_exited" from="Steps/ManifestSetup/VBoxContainer/AuthorEntry/Field/ModAuthor" to="Steps/ManifestSetup" method="_on_ModAuthor_focus_exited"]
[connection signal="text_changed" from="Steps/ManifestSetup/VBoxContainer/AuthorEntry2/Field/ModVersion" to="Steps/ManifestSetup" method="_on_ModVersion_text_changed"]
[connection signal="pressed" from="Steps/ManifestReview/VBoxContainer/CenterContainer/CreateMod" to="." method="_on_CreateMod_pressed"]
[connection signal="pressed" from="Steps/ManifestReview/VBoxContainer/CenterContainer/CreateMod" to="Steps/ManifestSetup" method="_on_CreateMod_pressed"]
[connection signal="pressed" from="StepButtons/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="StepButtons/Next" to="." method="_on_Next_pressed"]
